restructured and fixed spacing

--- a/src/styles/global-classes.scss
+++ b/src/styles/global-classes.scss
@@ -80,6 +80,7 @@
 }
 
 .col {
+    margin-top: 2em;
     margin-left: auto;
     margin-right: auto;
 }
